--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: l 10n\n"
 "Report-Msgid-Bugs-To: ayatana-dev@lists.launchpad.net\n"
-"POT-Creation-Date: 2014-03-06 16:28+0100\n"
+"POT-Creation-Date: 2013-04-17 16:00+0100\n"
 "PO-Revision-Date: 2010-03-02 12:36-0500\n"
 "Last-Translator: Canonical OEM\n"
 "Language-Team: Russian\n"
@@ -39,11 +39,6 @@ msgstr ""
 msgid " or Right"
 msgstr ""
 
-#. The "%s" is used in the dash preview to display the "<hint>: <value>" infos
-#, c-format
-msgid "%s:"
-msgstr ""
-
 msgid "Activate"
 msgstr ""
 
@@ -56,16 +51,10 @@ msgstr ""
 msgid "Categories"
 msgstr ""
 
-msgid "Close"
-msgstr ""
-
 msgid "Closes the current window."
 msgstr ""
 
-msgid "Comments"
-msgstr ""
-
-msgid "Ctrl + Alt + Num (keypad)"
+msgid "Ctrl + Alt + Num"
 msgstr ""
 
 msgid "Ctrl + Tab"
@@ -86,13 +75,10 @@ msgstr ""
 msgid "Eject parent drive"
 msgstr ""
 
-msgid "Empty Trash…"
+msgid "Empty Trash..."
 msgstr ""
 
 msgid "Enter"
-msgstr ""
-
-msgid "Exit"
 msgstr ""
 
 msgid "Filter results"
@@ -144,9 +130,6 @@ msgid "Hi %s, you have open files you might want to save. Would you like to…"
 msgstr ""
 
 msgid "Hibernate"
-msgstr ""
-
-msgid "Installing…"
 msgstr ""
 
 msgid "Keyboard Shortcuts"
@@ -217,9 +200,6 @@ msgid "Opens the Dash Home."
 msgstr ""
 
 msgid "Opens the Dash Music Lens."
-msgstr ""
-
-msgid "Opens the Dash Photo Lens."
 msgstr ""
 
 msgid "Opens the Dash Video Lens."
@@ -297,13 +277,7 @@ msgstr ""
 msgid "Sorry, there is nothing that matches your search."
 msgstr ""
 
-msgid "Spreads all windows in all the workspaces."
-msgstr ""
-
 msgid "Spreads all windows in the current workspace."
-msgstr ""
-
-msgid "Spreads all windows."
 msgstr ""
 
 msgid "Suspend"
@@ -316,9 +290,6 @@ msgid "Switches applications via the Launcher."
 msgstr ""
 
 msgid "Switches between Lenses."
-msgstr ""
-
-msgid "Switches between applications from all workspaces."
 msgstr ""
 
 msgid "Switches between applications."
