--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.2.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Release 7.2.0.
+
+ -- Stephen M. Webb <stephen.webb@canonical.com>  Mon, 31 Mar 2014 13:58:51 -0400
+
 unity (7.1.2+14.04.20140328.1-0ubuntu1) trusty; urgency=low
 
   [ Robert Ancell ]
