--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+unity (7.2.0+14.04.20140423-0ubuntu1.2) trusty-security; urgency=medium
+
+  * SECURITY UPDATE: more lock screen bypass issues, and regression with
+    shutdown dialog (LP: #1314247)
+    - debian/patches/lp1314247.patch: improve popup menu handling in
+      lockscreen/LockScreenShield.cpp, lockscreen/LockScreenPanel.cpp,
+      services/panel-service.c, plugins/unityshell/src/unityshell.cpp,
+      lockscreen/LockScreenController.*, shutdown/SessionController.cpp,
+      tests/test_session_controller.cpp.
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Wed, 30 Apr 2014 11:11:18 -0400
+
 unity (7.2.0+14.04.20140423-0ubuntu1.1) trusty-security; urgency=medium
 
   * SECURITY UPDATE: lock screen bypass (LP: #1313885)
