--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unity (7.2.0+14.04.20140423-0ubuntu2) utopic; urgency=medium
+
+  * debian/control: depends on autopilot-desktop-legacy rather than
+    autopilot-desktop.
+
+ -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Thu, 01 May 2014 00:32:05 -0400
+
 unity (7.2.0+14.04.20140423-0ubuntu1.2) trusty-security; urgency=medium
 
   * SECURITY UPDATE: more lock screen bypass issues, and regression with
