--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.3.0-0ubuntu1) UNRELEASED; urgency=low
+
+  * bump upstream to 7.3.0
+
+ -- Stephen M. Webb <stephen.webb@bregmasoft.ca>  Wed, 18 Jun 2014 09:06:46 -0400
+
 unity (7.2.0+14.10.20140607-0ubuntu1) utopic; urgency=low
 
   [ Chris Townsend ]
