updated AUTHORS and ChangeLog for 7.3.0

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@
  Alex Launi <alex.launi@canonical.com>
  Alex Launi <alex.launi@canonical.com>, Allan LeSage <allanlesage@gmail.com>
  Alex Launi <alex.launi@canonical.com>, Thomi Richards <thomi.richards@canonical.com>
+ Alfred Neumayer <dev.beidl@gmail.com>
  Andrea Azzarone
  Andrea Azzarone <azzaronea@gmail.com>
  Andrea Cimitan <andrea.cimitan@canonical.com>
@@ -44,8 +45,8 @@
  Christopher Lee <chris.lee@canonical.com>, Thomi Richards <thomi.richards@canonical.com>
  Christopher Lee <veebers@gmail.com>
  Christopher Townsend <christopher.townsend@canonical.com>
- Chris Townsend <Christopher.Townsend@canonical.com>
  Chris Townsend <christopher.townsend@canonical.com>
+ Chris Townsend <Christopher.Townsend@canonical.com>
  CI bot <ps-jenkins@lists.canonical.com>
  Daniel d'Andrada <daniel.dandrada@canonical.com>
  Daniel van Vugt <vanvugt@gmail.com>
@@ -86,6 +87,7 @@
  Jay Taoko <jay.taoko@canonical.com>, Mirco Müller <mirco.mueller@ubuntu.com>
  Jay Taoko <jay.taoko@canonical.com>, Robert Carr <racarr@canonical.com>
  Jeremy Bicha <jbicha@ubuntu.com>
+ Jinkyu Yi <jincreator@jincreator.net>
  jokerdino@bvm128.zdom.org
  Jussi Pakkanen <jussi.pakkanen@canonical.com>
  Ken VanDine <ken.vandine@canonical.com>
@@ -100,6 +102,7 @@
  Luke Yelavich <luke.yelavich@canonical.com>
  Manuel de la Pena <manuel@canonical.com>
  Manuel de la Pena <manuel@canonical.com>, Nick Dedekind <nicholas.dedekind@gmail.com>, Pawel Stolowski <pawel.stolowski@canonical.com>, Michal Hruby <michal.mhr@gmail.com>, Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>, Marco Trevisan (Treviño) <mail@3v1n0.net>, Automatic PS uploader <ps-jenkins@lists.canonical.com>, Chris Townsend <christopher.townsend@canonical.com>, Andrea Azzarone <azzaronea@gmail.com>
+ Marc Deslauriers <marc.deslauriers@ubuntu.com>
  Marco Biscaro <marcobiscaro2112@gmail.com>
  Marco Biscaro <marcobiscaro2112@gmail.com>, Rick Spencer <rick.spencer@canonical.com>
  Marco Mariani <dfly720@gmail.com>, Thomi Richards <thomi.richards@canonical.com>
@@ -108,6 +111,7 @@
  Marco Trevisan <marco.trevisan@canonical.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, 3v1n0 <mail@3v1n0.net>
+ Marco Trevisan (Treviño) <mail@3v1n0.net>, Andrea Azzarone <azzaronea@gmail.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Andrea Cimitan <andrea.cimitan@canonical.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Brandon Schaefer <brandon.schaefer@canonical.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Brandon Schaefer <brandontschaefer@gmail.com>, Tim Penhey <tim.penhey@canonical.com>
@@ -168,6 +172,7 @@
  Rodrigo Moya <rodrigo.moya@canonical.com>
  Romain Perier <rperier@ubuntu.com>
  Ryan Lortie <desrt@desrt.ca>
+ Sami Jaktholm <sjakthol@outlook.com>
  Sam Spilsbury <sam.spilsbury@canonical.com>
  Sam Spilsbury <sam.spilsbury@canonical.com>, Andrea Azzarone <azzaronea@gmail.com>
  Sam Spilsbury <sam.spilsbury@canonical.com>, Daniel van Vugt <vanvugt@gmail.com>
