--- a/po/unity.pot
+++ b/po/unity.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: ayatana-dev@lists.launchpad.net\n"
-"POT-Creation-Date: 2014-07-11 19:15+0200\n"
+"POT-Creation-Date: 2013-04-17 16:00+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,26 +38,6 @@ msgstr ""
 msgid "Last Updated"
 msgstr ""
 
-#. The "%s" is used in the dash preview to display the "<hint>: <value>" infos
-#, c-format
-msgid "%s:"
-msgstr ""
-
-msgid "Comments"
-msgstr ""
-
-msgid "This window is not responding"
-msgstr ""
-
-msgid "Do you want to force the application to exit, or wait for it to respond?"
-msgstr ""
-
-msgid "_Wait"
-msgstr ""
-
-msgid "_Force Quit"
-msgstr ""
-
 msgid "Type your command"
 msgstr ""
 
@@ -68,12 +48,6 @@ msgid "Unlock from Launcher"
 msgstr ""
 
 msgid "Quit"
-msgstr ""
-
-msgid "Exit"
-msgstr ""
-
-msgid "Close"
 msgstr ""
 
 msgid "Search your computer and online sources"
@@ -95,16 +69,13 @@ msgstr ""
 msgid "Waiting to install"
 msgstr ""
 
-msgid "Installing…"
-msgstr ""
-
 msgid "Drop To Add Application"
 msgstr ""
 
 msgid "Trash"
 msgstr ""
 
-msgid "Empty Trash…"
+msgid "Empty Trash..."
 msgstr ""
 
 msgid "Open"
@@ -125,15 +96,6 @@ msgstr ""
 msgid "Unmount"
 msgstr ""
 
-msgid "Password"
-msgstr ""
-
-msgid "Username"
-msgstr ""
-
-msgid "Invalid password, please try again"
-msgstr ""
-
 msgid "Ubuntu Desktop"
 msgstr ""
 
@@ -141,14 +103,6 @@ msgid "Dash"
 msgstr ""
 
 msgid "Launcher"
-msgstr ""
-
-#, c-format
-msgid "%s: running: %zu windows open"
-msgstr ""
-
-#, c-format
-msgid "%s: running"
 msgstr ""
 
 msgid "Quicklist"
@@ -211,9 +165,6 @@ msgstr ""
 msgid "Opens the Dash Music Lens."
 msgstr ""
 
-msgid "Opens the Dash Photo Lens."
-msgstr ""
-
 msgid "Opens the Dash Video Lens."
 msgstr ""
 
@@ -259,9 +210,6 @@ msgstr ""
 msgid "Switches between applications."
 msgstr ""
 
-msgid "Switches between applications from all workspaces."
-msgstr ""
-
 msgid "Switches windows of current applications."
 msgstr ""
 
@@ -284,12 +232,6 @@ msgid "Windows"
 msgstr ""
 
 msgid "Spreads all windows in the current workspace."
-msgstr ""
-
-msgid "Spreads all windows."
-msgstr ""
-
-msgid "Spreads all windows in all the workspaces."
 msgstr ""
 
 msgid "Minimises all windows."
@@ -316,7 +258,7 @@ msgstr ""
 msgid "Places the window in corresponding position."
 msgstr ""
 
-msgid "Ctrl + Alt + Num (keypad)"
+msgid "Ctrl + Alt + Num"
 msgstr ""
 
 msgid " Drag"
@@ -326,11 +268,6 @@ msgid "Moves the window."
 msgstr ""
 
 msgid "Resizes the window."
-msgstr ""
-
-msgid ""
-"Other users are logged in. Restarting or shutting down will close their open applications and may cause them to lose work.\n"
-"\n"
 msgstr ""
 
 msgid "Shut Down"
@@ -389,8 +326,4 @@ msgid "No Image Available"
 msgstr ""
 
 msgid "Filter results"
-msgstr ""
-
-#. avoid wrap lines
-msgid "Caps lock is on"
 msgstr ""
