--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.3.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Split out dconf schemas into separate package
+
+ -- Michal Hruby <michal.hruby@canonical.com>  Wed, 30 Jul 2014 12:17:06 +0100
+
 unity (7.3.0+14.10.20140711-0ubuntu1) utopic; urgency=low
 
   [ Eleni Maria Stea ]
