--- a/doc/unity.1
+++ b/doc/unity.1
@@ -14,7 +14,7 @@ The \fBunity\fP program can be used to start the Unity shell as a compiz module,
 .SH OPTIONS
 .TP
 .BR \-\-advanced\-debug
-Runs unity under debugging (using \fBgdb\fR or another debugger tool) to help tracking issues. Should only be used on request from a developper following a bug report.
+Runs unity under debugging (using \fBgdb\fR or another debugger tool) to help tracking issues. Should only be used on request from a developer following a bug report.
 
 .TP
 .BR "-\-compiz-path \fICOMPIZ_PATH\fR"
@@ -24,7 +24,7 @@ Runs the compositor from a non-standard location.
 .BR \-\-debug
 Runs Unity under
 .B gdb
-and prints a stackstrace on crash.
+and prints a stack trace on crash.
 
 .TP
 .BR \-h ", " \-\-help
@@ -36,11 +36,11 @@ This parameter, followed by a path or filename, tells the Unity shell to store l
 
 .TP
 .BR \-\-replace
-Deprecated option for backwards compatibility.  Has ne effect.
+Deprecated option for backwards compatibility.  Has no effect.
 
 .TP
 .BR \-\-reset\-icons
-Resets teh default Launcher icons.
+Resets the default Launcher icons.
 
 .TP
 .BR \-v ", " \-\-version
