--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.3.1+14.10.20140915-0ubuntu2) utopic; urgency=medium
+
+  * No change rebuild for gnome-desktop 3.12
+
+ -- Tim Lunn <tim@feathertop.org>  Mon, 29 Sep 2014 22:06:26 +1000
+
 unity (7.3.1+14.10.20140915-0ubuntu1) utopic; urgency=low
 
   [ Michael Zanetti ]
