--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+unity (7.3.1+14.10.20140915-0ubuntu2~suspend1) utopic; urgency=medium
+
+  * Test suspend 2. 
+
+ -- Andrea Azzarone <andrea@andy-XPS-L421X>  Tue, 21 Oct 2014 15:27:15 +0200
+
+unity (7.3.1+14.10.20140915-0ubuntu2~suspend0) utopic; urgency=medium
+
+  * Test suspend. \o/
+
+ -- Andrea Azzarone <andrea@andy-XPS-L421X>  Tue, 21 Oct 2014 15:20:19 +0200
+
 unity (7.3.1+14.10.20140915-0ubuntu1) utopic; urgency=low
 
   [ Michael Zanetti ]
