--- a/AUTHORS
+++ b/AUTHORS
@@ -28,7 +28,9 @@
  Brandon Schaefer <brandon.schaefer@canonical.com>, Brandon Schaefer <brandontschaefer@gmail.com>
  Brandon Schaefer <brandon.schaefer@canonical.com>, MC Return <mc.return@gmx.net>
  Brandon Schaefer <brandon.schaefer@canonical.com>, Nick Dedekind <nicholas.dedekind@gmail.com>
+ Brandon Schaefer <brandontschaefer@gmail.com
  Brandon Schaefer <brandontschaefer@gmail.com>
+ Brandon Schaefer <brandontschaefer@gmail.com, Brandon Schaefer <brandontschaefer@gmail.com>
  Brandon Schaefer <brandontschaefer@gmail.com, Jay Taoko <jay.taoko@canonical.com>
  Brandon Schaefer <brandontschaefer@gmail.com>, Marco Trevisan (Treviño) <mail@3v1n0.net>
  Brandon Schaefer <brandontschaefer@gmail.com>, Thomi Richards <thomi.richards@canonical.com>
@@ -118,6 +120,7 @@
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Michal Hruby <michal.mhr@gmail.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Sam Spilsbury <sam.spilsbury@canonical.com>
  Marco Trevisan (Treviño) <mail@3v1n0.net>, Thomi Richards <thomi.richards@canonical.com>
+ Marco Trevisan (Treviño), Marco Trevisan (Treviño) <mail@3v1n0.net>
  Marius Gedminas <marius@gedmin.as>
  Martin Albisetti <argentina@gmail.com>
  Martin Mrazik <martin.mrazik@canonical.com>
