--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.3.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Upstream release 7.3.2.
+
+ -- Stephen M. Webb <stephen.webb@canonical.com>  Thu, 19 Mar 2015 11:03:12 -0400
+
 unity (7.3.1+15.04.20150227-0ubuntu1) vivid; urgency=medium
 
   [ Andrea Azzarone ]
