--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.3.2+15.10.20151014-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Sync changelog with proposed
+
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Thu, 15 Oct 2015 16:59:50 +0100
+
 unity (7.3.2+15.10.20150910.1-0ubuntu1) wily; urgency=medium
 
   [ Andrea Azzarone andrea.azzarone@canonical.com ]
