--- a/po/unity.pot
+++ b/po/unity.pot
@@ -270,6 +270,12 @@ msgstr ""
 msgid "Resizes the window."
 msgstr ""
 
+msgid "Take a screenshot."
+msgstr ""
+
+msgid "Take a screenshot of the current window."
+msgstr ""
+
 msgid "Shut Down"
 msgstr ""
 
