--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.4.0+16.04.20151218-0ubuntu2) xenial; urgency=medium
+
+  * Multiarchify the library packages.
+
+ -- Matthias Klose <doko@ubuntu.com>  Thu, 28 Jan 2016 17:38:52 +0100
+
 unity (7.4.0+16.04.20151218-0ubuntu1) xenial; urgency=medium
 
   [ Aneesh Madhavan ]
